# simple_websocket

./: .gitignore  CMakeLists.txt  README.md  simple_websocket.hpp
.github/workflows/: cmake.yml
cmake/: poco.cmake  testing.cmake
example/: CMakeLists.txt  README.md  main.cpp
example/cmake/: poco.cmake  simple_websocket.cmake
example/server/: index.js  package-lock.json  package.json
example/src/: ExampleFrameParser.h  ExampleWebSocket.h  ExecutionContext.h  PocoWrapper.h  Types.h  Variant.h  WebSocketClient.h  WebSocketWorkflow.h  Workflow.h  WorkflowResult.h
include/: simple_websocket.hpp
test/: SimpleWebSocketTests.cpp
